--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
         <div class="habit" data-name="book">📕</div>
         <div class="habit" data-name="takepills">💊</div>
         <div class="habit" data-name="meditate">🧘</div>
+        <div class="habit" data-name="sleep">💤</div>
+        <div class="habit" data-name="game">🎮</div>
 
 
       </div>
